# FraudDetection

./: BetaRaw.docx  Data Science Approaches to Fraud Detection in KYC and KYT.docx  IMPLEMENTATION_LOG.md  Paper project review.docx  fraud_detection_standalone.ipynb  kyc_kyt_fraud_detection.ipynb  ~$ta Science Approaches to Fraud Detection in KYC and KYT.docx
.claude/: settings.local.json
fraud_detection/: README.md  requirements.txt  setup.py
fraud_detection/config/: config.py
fraud_detection/configs/: config.yaml
fraud_detection/models_saved/: autoencoder_model.keras  autoencoder_threshold.npy  encoder_model.keras  isolation_forest_model.pkl  kmeans_model.pkl  random_forest_model.pkl  scaler.pkl  xgboost_model.pkl
fraud_detection/notebooks/: 01_fraud_detection_complete.ipynb
fraud_detection/src/: __init__.py
fraud_detection/src/data/: __init__.py  loader.py
fraud_detection/src/evaluation/: __init__.py  metrics.py  visualizations.py
fraud_detection/src/features/: __init__.py  engineering.py
fraud_detection/src/models/: __init__.py  anomaly.py  classifiers.py
fraud_detection/src/utils/: __init__.py
fraud_detection_project/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fraud_detection_project/api/: __init__.py  main.py
fraud_detection_project/api/routes/: __init__.py  health.py  predict.py
fraud_detection_project/api/schemas/: __init__.py  transaction.py
fraud_detection_project/config/: __init__.py  logging_config.py  settings.py
fraud_detection_project/docs/: model_card.md
fraud_detection_project/scripts/: train.py
fraud_detection_project/src/: __init__.py
fraud_detection_project/src/data/: __init__.py  loader.py  preprocessor.py  validator.py
fraud_detection_project/src/evaluation/: __init__.py  metrics.py
fraud_detection_project/src/features/: __init__.py  engineer.py
fraud_detection_project/src/models/: __init__.py  base.py  ensemble.py  supervised.py  unsupervised.py
fraud_detection_project/tests/: conftest.py  test_models.py
kyc_kyt_fraud_detection/: QUICKSTART.md  README.md  requirements.txt  setup.py
kyc_kyt_fraud_detection/config/: settings.py
kyc_kyt_fraud_detection/scripts/: train.py
kyc_kyt_fraud_detection/src/data/: aggregator.py  loader.py  validator.py
kyc_kyt_fraud_detection/src/evaluation/: metrics.py  statistical_tests.py
kyc_kyt_fraud_detection/src/features/: engineering.py  kyc_features.py  kyt_features.py
kyc_kyt_fraud_detection/src/models/: base.py  optimizer.py  supervised.py  unsupervised.py
